js/js.translator/testData/incremental/invalidation/typeScriptExportSurfaceUpdatesPerFile/lib1/l1.0.kt
@JsExport
fun foo(): Int = 0
